# podofo-capi

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/helloworld/: CMakeLists.txt  helloworld.cpp
src/: AutoGenWrap.cpp  podofo.xml  podofo_config.h  podofo_params.xml
src/PoDoFo/base/: PdfCanvas.h
src/bcapi/: AutoPtr.h  KeyMap.h  List.h  PdfLong.h  PdfLongImpl.h  Set.h  SharedPtr.h  String.h  Vector.h
src/snippets/: PoDoFo.h
src/snippets/PoDoFo/: PdfAction.h  PdfActionImpl.h  PdfBufferOutputStream.h  PdfBufferOutputStreamImpl.h  PdfCMapEncoding.h  PdfCMapEncodingImpl.h  PdfCanvas.h  PdfCanvasImpl.h  PdfCanvasSharedPtr.h  PdfDataType.h  PdfDataTypeImpl.h  PdfDataTypeSharedPtr.h  PdfDeviceInputStream.h  PdfDeviceInputStreamImpl.h  PdfDeviceOutputStream.h  PdfDeviceOutputStreamImpl.h  PdfDifferenceEncoding.h  PdfDocEncoding.h  PdfDocEncodingImpl.h  PdfDocument.h  PdfDocumentImpl.h  PdfEncoding.h  PdfEncodingImpl.h  PdfEncrypt.h  PdfEncryptAESBase.h  PdfEncryptAESBaseImpl.h  PdfEncryptAESV2.h  PdfEncryptAESV2Base.h  PdfEncryptAESV3.h  PdfEncryptAESV3Base.h  PdfEncryptImpl.h  PdfEncryptMD5Base.h  PdfEncryptMD5BaseImpl.h  PdfEncryptRC4.h  PdfEncryptRC4Base.h  PdfEncryptRC4BaseImpl.h  PdfEncryptRC4Impl.h  PdfFileInputStream.h  PdfFileInputStreamImpl.h  PdfFileOutputStream.h  (+85 more)
src/snippets/PoDoFo/PdfEncryptImpl/: EPdfEncryptAlgorithm.h
src/snippets/PoDoFo/PdfError/: LogMessageCallback.h
src/snippets/PoDoFo/PdfVecObjects/: Observer.h  ObserverImpl.h  StreamFactory.h
